--- a/templates/planning/event.html.twig
+++ b/templates/planning/event.html.twig
@@ -1,6 +1,6 @@
 {% if odd == true %}
     <div class="row position-relative planning-row align-items-center my-5">
-        <div class="col-4 offset-1 d-flex flex-column planning-over text-right">
+        <div class="col-4 offset-1 d-flex flex-column planning-over text-right move">
             <div>{{ exposition.title }}</div>
             <div>{{ exposition.shortDescription }}</div>
             <div>Initiée par l'Institut Français, cette exposition fera l'état des lieux de la scène artistique africaine. Elle accompagne les chroniques de la Base Sous-Marine, d'hier à aujourd'hui.</div>
@@ -20,13 +20,13 @@
             </div>
         </div>
         <div class="col-4 p-0 planning-over offset-2">
-            <div class="planning-second-photo" style="background-image: url(/uploads/images/{{ exposition.artistPhoto }})"></div>
+            <div class="planning-second-photo move" style="background-image: url(/uploads/images/{{ exposition.artistPhoto }})"></div>
         </div>
     </div>
 {% else %}
     <div class="row position-relative planning-row align-items-center my-5">
         <div class="col-4 offset-1 planning-over">
-            <div class="planning-second-photo" style="background-image: url(/uploads/images/{{ exposition.artistPhoto }})"></div>
+            <div class="planning-second-photo move" style="background-image: url(/uploads/images/{{ exposition.artistPhoto }})"></div>
         </div>
         <div class="planning-first-photo-wrapper">
             <div class="planning-first-photo" style="background-image: url(/uploads/images/{{ exposition.tinyImage }})">
@@ -42,7 +42,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-4 p-0 planning-over offset-2 text-left">
+        <div class="col-4 p-0 planning-over offset-2 text-left move">
             <div>{{ exposition.title }}</div>
             <div>{{ exposition.shortDescription }}</div>
             <div>Initiée par l'Institut Français, cette exposition fera l'état des lieux de la scène artistique africaine. Elle accompagne les chroniques de la Base Sous-Marine, d'hier à aujourd'hui.</div>
