--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -107,10 +107,10 @@
     <div class="instagram-gallery pb-2">
         <div class="container py-5">
             <div class="row">
-                <div class="offset-2 col-2 p-2">
+                <div class="offset-2 col-2 p-2 pr-3">
                     <div class="instagram-fourth-photo ml-auto water" style="background-image: url(/uploads/images/{{ instagramGallery.secondImage }})"></div>
                 </div>
-                <div class="col-1 pr-0 pl-0">
+                <div class="col-auto pr-0 pl-0">
                     <div class="ml-auto square-action pointer-square current-event--main-square black-big-dot"></div>
                     <div class="instagram-text-block hidden-text">
                         <div class="instagram-text-block-title">Au coeur de l’exposition</div>
