--- a/templates/exposition/index.html.twig
+++ b/templates/exposition/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ExpositionController!{% endblock %}
+{% block title %}Exposition{% endblock %}
 
 {% block body %}
     <div class="exposition" style="background-image: url(/images/expobienvenue-bg-page.png)">
