--- a/templates/ticket_confirmation/index.html.twig
+++ b/templates/ticket_confirmation/index.html.twig
@@ -7,8 +7,8 @@
         <div class="container pt-5 mb-4">
             <div class="row">
                 <div class="col">
-                    <div>Billetterie</div>
-                    <div>Imprimez ou téléchargez votre billet.</div>
+                    <div class="ticket-title">Billetterie</div>
+                    <div class="ticket-subtitle">Imprimez ou téléchargez votre billet.</div>
                 </div>
             </div>
         </div>
@@ -17,7 +17,7 @@
                 <div class="col-10 ticket-form">
                     <div class="col-7 offset-2">
                         <div class="col-7 pt-5 p-0">
-                            <div class="mb-2">VOTRE RÉSERVATION</div>
+                            <div class="mb-2 ticket-reserve">VOTRE RÉSERVATION</div>
                             <div class="ticket-resume row m-0">
                                 <div class="col-6 offset-1 mb-3 font-weight-bold">
                                     Billet d’entrée
@@ -28,43 +28,43 @@
                                 <div class="col-2 font-weight-bold">
                                     Prix
                                 </div>
-                                <div class="col-6 offset-1">
+                                <div class="col-6 offset-1 font-weight-light">
                                     Rhizomes/Africa2020
                                 </div>
-                                <div class="col-3">
+                                <div class="col-3 font-weight-light">
                                     2
                                 </div>
-                                <div class="col-2">
+                                <div class="col-2 font-weight-light">
                                     3 €
                                 </div>
-                                <div class="col-6 offset-1">
+                                <div class="col-6 offset-1 font-weight-light">
                                     Rhizomes/Africa2020
                                 </div>
-                                <div class="col-3">
+                                <div class="col-3 font-weight-light">
                                     1
                                 </div>
-                                <div class="col-2">
+                                <div class="col-2 font-weight-light">
                                     5 €
                                 </div>
                             </div>
                             <div class="row justify-content-end pt-3 pb-3 pl-3 pr-5">
                                 <div class="col p-0">
                                     <div class="row">
-                                        <div class="col-3 text-right ml-auto">Total</div>
-                                        <div class="col-3 text-right">8 €</div>
+                                        <div class="col-3 text-right ml-auto font-weight-light">Total</div>
+                                        <div class="col-3 text-right font-weight-light">8 €</div>
                                     </div>
                                     <div class="row">
-                                        <div class="col-3 text-right ml-auto">TVA</div>
-                                        <div class="col-3 text-right">0.80 €</div>
+                                        <div class="col-3 text-right ml-auto font-weight-light">TVA</div>
+                                        <div class="col-3 text-right font-weight-light">0.80 €</div>
                                     </div>
                                     <div class="row">
                                         <div class="col-3 text-right ml-auto font-weight-bold">Total TTC</div>
-                                        <div class="col-3 text-right">8.80 €</div>
+                                        <div class="col-3 text-right font-weight-light">8.80 €</div>
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-6 ml-auto pl-0 pr-3 d-flex"><button class="primary-button w-100">Payer en ligne</button></div>
+                                <div class="col-6 ml-auto pl-0 pr-3 d-flex"><button class="primary-button w-100 ticket-button">Payer en ligne</button></div>
                             </div>
                         </div>
                     </div>
