--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -51,7 +51,7 @@
                                 <div class="current-event--main-square big-dot" style="background-image: url(/uploads/images/{{ homepage.currentExposition.tinyImage }}); background-size: contain"></div>
                             </div>
                             <div>
-                                <div class="ml-4 mb-3">{{ homepage.currentExposition.title }}</div>
+                                <div class="ml-4 mb-3 expo-title">{{ homepage.currentExposition.title }}</div>
                                 <div>
                                     <div class="current-event-subtitle">{{ homepage.currentExposition.thematique }}</div>
                                 </div>
@@ -59,7 +59,7 @@
                         </div>
                         <div class="col-4 d-flex flex-column justify-content-between align-items-end pt-0 pr-0">
                             <div class="d-flex">
-                                <div class="mr-3 mt-3 underline pr-2">{{ homepage.currentExposition.artistName }}</div>
+                                <div class="mr-3 mt-3 underline pr-2 current-event--main-name">{{ homepage.currentExposition.artistName }}</div>
                                 <div class="current-event--main-square text-center no-dot">{{ homepage.currentExposition.startAt|date('d') }} {{ homepage.currentExposition.startAt|date('M', "Europe/Paris") }}
                                     <br>{{ homepage.currentExposition.startAt|date('Y') }}</div>
                             </div>
@@ -80,8 +80,8 @@
                 <div class="col-12 col-md-6 text-center">
                     <div class="coming-content water row m-0 justify-content-between" style="background-image: url(/uploads/images/{{ homepage.artistExposition.bannerImage }})">
                         <div class="col-auto d-flex flex-column justify-content-end pb-4 pl-4 text-left">
-                            <div class="font-weight-bold">{{ homepage.artistExposition.title }}</div>
-                            <div class="font-weight-light">{{ homepage.artistExposition.shortDescription }}</div>
+                            <div class="expo__title">{{ homepage.artistExposition.title }}</div>
+                            <div class="expo__subtitle">{{ homepage.artistExposition.shortDescription }}</div>
                         </div>
                         <div class="col-auto d-flex flex-column justify-content-start pr-0">
                             <div class="current-event--main-square">{{ homepage.artistExposition.startAt|date('d') }} {{ homepage.artistExposition.startAt|date('M', "Europe/Paris") }}
@@ -92,8 +92,8 @@
                 <div class="col-12 col-md-6 text-center">
                     <div class="coming-content water row m-0 justify-content-between" style="background-image: url(/uploads/images/{{ homepage.artistExposition.bannerImage }})">
                         <div class="col-auto d-flex flex-column justify-content-end pb-4 pl-4 text-left">
-                            <div class="font-weight-bold">{{ homepage.artistExposition.title }}</div>
-                            <div class="font-weight-light">{{ homepage.artistExposition.shortDescription }}</div>
+                            <div class="expo__title">{{ homepage.artistExposition.title }}</div>
+                            <div class="expo__subtitle">{{ homepage.artistExposition.shortDescription }}</div>
                         </div>
                         <div class="col-auto d-flex flex-column justify-content-start pr-0">
                             <div class="current-event--main-square">{{ homepage.artistExposition.startAt|date('d') }} {{ homepage.artistExposition.startAt|date('M', "Europe/Paris") }}
@@ -127,7 +127,7 @@
                 <div class="col-12 col-md-auto px-3 pb-3 pt-2">
                     <div class="d-flex flex-column">
                         <div class="instagram-first-photo p-3 d-flex flex-column justify-content-end water" style="background-image: url(/uploads/images/{{ instagramGallery.firstImage }})">
-                            <div class="color-white text-right">{{ instagramGallery.firstDescription }}</div>
+                            <div class="color-white text-right instagram-first-photo-description">{{ instagramGallery.firstDescription }}</div>
                         </div>
                         <div class="mt-3 instagram-first-photo-title">sélection de vos photos</div>
                     </div>
