--- a/templates/planning/index.html.twig
+++ b/templates/planning/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello PlanningController!{% endblock %}
+{% block title %}Planning{% endblock %}
 
 {% block body %}
 <div class="planning position-relative py-5" style="background-image: url(/images/programme-bg-page.png); background-size: cover;">
@@ -19,7 +19,7 @@
                 </div>
             </div>
             <div class="col text-center">
-                <div>2021</div>
+                <div class="planning-year">2021</div>
             </div>
             <div class="col"></div>
         </div>
@@ -36,7 +36,7 @@
     <div class="container mt-5 pt-4 pb-4 mb-3">
         <div class="row">
             <div class="col text-center">
-                <div>2020</div>
+                <div class="planning-year">2020</div>
             </div>
         </div>
     </div>
