--- a/templates/ticket_pay/index.html.twig
+++ b/templates/ticket_pay/index.html.twig
@@ -7,8 +7,8 @@
         <div class="container pt-5 mb-4">
             <div class="row">
                 <div class="col">
-                    <div>Billetterie</div>
-                    <div>Acheter votre pass, payer en ligne ou sur place !</div>
+                    <div class="ticket-title">Billetterie</div>
+                    <div class="ticket-subtitle">Acheter votre pass, payer en ligne ou sur place !</div>
                 </div>
             </div>
         </div>
@@ -17,8 +17,8 @@
                 <div class="col-10 ticket-form">
                     <div class="col-7 offset-2">
                         <div class="pl-1 d-flex flex-column">
-                            <div class="mb-2">Réserver votre billet</div>
-                            <div class="mb-3">Entrez vos informations bancaires.</div>
+                            <div class="mb-2 ticket-reserve">Réserver votre billet</div>
+                            <div class="mb-3 font-weight-light">Entrez vos informations bancaires.</div>
                             <div>Moyen de paiement :</div>
                             <div class="d-flex"><input placeholder="Moyen de paiement" class="w-50" type="text"></div>
                             <div>Numéro de carte</div>
@@ -27,7 +27,7 @@
                             <div class="d-flex"><input placeholder="Moyen de paiement" class="w-50" type="text"></div>
                             <div>Cryptogramme visuel</div>
                             <div class="d-flex"><input placeholder="xxx" class="w-50" type="text"></div>
-                            <div class="text-left mt-3"><button class="primary-button"><a href="{{ path('ticket_confirmation') }}">Payer et réserver</a></button></div>
+                            <div class="text-left mt-3"><button class="primary-button ticket-button"><a href="{{ path('ticket_confirmation') }}">Payer et réserver</a></button></div>
                         </div>
                     </div>
                 </div>
