--- a/public/css/style.css
+++ b/public/css/style.css
@@ -81,6 +81,7 @@ header * {
     background-image: url("/images/home-herofullscreen-bg-.png");
     background-size: cover;
     position: relative;
+    background-position: bottom;
     color: white;
     height: calc(100vh - 200px);
     padding-left: 40px;
@@ -278,6 +279,12 @@ a:hover {
 }
 .planning-row {
     height: 505px;
+}
+.name-text {
+    position: absolute;
+    height: 0;
+    transform: translateY(-70px);
+    margin-left: -50px;
 }
 .planning-first-photo-wrapper {
     position: absolute;
@@ -702,4 +709,76 @@ input::placeholder {
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
+}
+.square-with-arrow {
+    position: relative;
+}
+[class*="icono"] {
+    position: relative;
+    display: inline-block;
+    vertical-align: middle;
+    color: white;
+    box-sizing: border-box;
+}
+[class*="icono"]:after,
+[class*="icono"]:before {
+    content: "";
+    box-sizing: border-box;
+}
+[class*="icono-arrow1"] {
+    width: 11px;
+    height: 11px;
+    border-width: 2px 2px 0 0;
+    border-style: solid;
+    margin: 10px;
+}
+[class*="icono-arrow1"]:before {
+    right: 0;
+    top: -1.5px;
+    position: absolute;
+    height: 2px;
+    border-radius: 10px;
+    box-shadow: inset 0 0 0 32px;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    width: 24px;
+    -webkit-transform-origin: right top;
+    transform-origin: right top;
+}
+[class*="icono-arrow1"][class*="-left"] {
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+.arrow-wrapper {
+    position: absolute;
+    top: 50%;
+    left: 90%;
+    opacity: 0;
+    transform: translateY(-50%);
+    transition: opacity ease-in 0.3s;
+}
+.third-square-row {
+    max-height: 50px;
+}
+.arrow-square:hover .arrow-wrapper {
+    opacity: 1;
+}
+.hidden-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    display: block;
+    transition: opacity ease-in 0.3s;
+    background-size: cover;
+    z-index: 5;
+    pointer-events: none;
+}
+.hidden-image-container:hover .hidden-image {
+    opacity: 1;
+}
+.position-initial {
+    position: initial !important;
 }
