--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -16,20 +16,20 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-3 d-none d-sm-block offset-8 mb-3 text-center">
-                <a href="" class="square-action secondary-square mx-auto"></a>
-                <div class="hidden-text mt-0 pt-3 square-action-text"><div class="">Gagner deux places <br> gratuites</div> arrow-right</div>
+            <div class="col-3 d-none d-sm-block offset-8 mb-5 text-center">
+                <a href="" class="square-action secondary-square mx-auto position-relative arrow-square"><div class="arrow-wrapper"><i class="icono-arrow1-left"></i></div></a>
+                <div class="hidden-text mt-0 pt-3 square-action-text square-with-arrow"><div class="">Entrez la clé</div></div>
             </div>
         </div>
-        <div class="row pb-3">
+        <div class="row third-square-row pb-0">
             <div class="col-3 d-none d-sm-block offset-7 text-center">
                 <div class="square-action secondary-square mx-auto"></div>
                 <div class="hidden-text">Une initiative <br> de la mairie de Bordeaux</div>
             </div>
         </div>
-        <div class="row mt-2">
+        <div class="row mt-0">
             <div class="col-3 d-none d-sm-block offset-1">
-                <div class="square-action secondary-square mx-auto current-event--main-square tiny-square"></div>
+                <div class="square-action secondary-square mx-auto"></div>
                 <div class="hidden-text">Ouvert tous les jours <br> de {{ homepage.openInfo }}</div>
             </div>
         </div>
@@ -45,10 +45,12 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <div class="row m-0 current-event-content water justify-content-between" style="background-image: url('/uploads/images/home-en-ce-moment.png')">
-                        <div class="col-8 d-flex flex-column justify-content-between pb-0 pl-0">
+                    <a href="{{ path('exposition', {id: homepage.currentExposition.id}) }}" class="row m-0 current-event-content water justify-content-between position-relative" style="background-image: url('/uploads/images/home-en-ce-moment.png')">
+                        <div class="col-8 d-flex flex-column justify-content-between pb-0 pl-0 position-initial">
                             <div class="p-3">
-                                <div class="current-event--main-square big-dot" style="background-image: url(/uploads/images/{{ homepage.currentExposition.tinyImage }}); background-size: contain"></div>
+                                <div class="current-event--main-square big-dot square-action hidden-image-container position-initial" style="background-image: url(/uploads/images/{{ homepage.currentExposition.tinyImage }}); background-size: contain">
+                                    <div class="container hidden-image" style="background-image: url(/uploads/images/{{ homepage.currentExposition.tinyImage }})"></div>
+                                </div>
                             </div>
                             <div>
                                 <div class="ml-4 mb-3">{{ homepage.currentExposition.title }}</div>
@@ -64,7 +66,7 @@
                                     <br>{{ homepage.currentExposition.startAt|date('Y') }}</div>
                             </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
@@ -77,7 +79,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-12 col-md-6 text-center">
+                <a href="{{ path('exposition', {id: homepage.currentExposition.id}) }}" class="col-12 col-md-6 text-center">
                     <div class="coming-content water row m-0 justify-content-between" style="background-image: url(/uploads/images/{{ homepage.artistExposition.bannerImage }})">
                         <div class="col-6 d-flex flex-column justify-content-end pb-4 pl-4 text-left">
                             <div class="font-weight-bold">{{ homepage.artistExposition.title }}</div>
@@ -88,8 +90,8 @@
                                 <br>{{ homepage.artistExposition.startAt|date('Y') }}</div>
                         </div>
                     </div>
-                </div>
-                <div class="col-12 col-md-6 text-center">
+                </a>
+                <a href="{{ path('exposition', {id: homepage.currentExposition.id}) }}" class="col-12 col-md-6 text-center">
                     <div class="coming-content water row m-0 justify-content-between" style="background-image: url(/uploads/images/{{ homepage.artistExposition2.bannerImage }})">
                         <div class="col-6 d-flex flex-column justify-content-end pb-4 pl-4 text-left">
                             <div class="font-weight-bold">{{ homepage.artistExposition2.title }}</div>
@@ -100,7 +102,7 @@
                                 <br>{{ homepage.artistExposition2.startAt|date('Y') }}</div>
                         </div>
                     </div>
-                </div>
+                </a>
             </div>
         </div>
     </div>
