--- a/templates/planning/index.html.twig
+++ b/templates/planning/index.html.twig
@@ -37,7 +37,7 @@
             </div>
         </div>
     </div>
-    <div class="my-5 py-5"></div>
+    <div class="mb-5 py-5"></div>
     <div class="my-5"></div>
 </div>
 {% endblock %}
